--- a/render.yaml
+++ b/render.yaml
@@ -10,4 +10,6 @@ services:
       - key: JWT_SECRET
         sync: false
       - key: PORT
-        value: 10000 
+        value: 10000
+      - key: RENDER
+        value: true 
