--- a/client/package.json
+++ b/client/package.json
@@ -1,9 +1,9 @@
-{
+﻿{
   "name": "elbs-client",
   "private": true,
   "version": "0.1.0",
   "type": "module",
-  "homepage": "https://dileep99999.github.io/ELB",
+  "homepage": "https://ELB",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -35,3 +35,4 @@
     "vite": "^5.0.0"
   }
 }
+
